# copydeps

./: .gitignore  Cargo.toml  Makefile  README.md  README.txt  copydeps.man  copydeps.py  cpso.py  cpso.sh  setup.py
.circleci/: config.yml
copydeps/: copydeps.py  get_deps.py  run_program.py  settings.py  version.py
misc/: copydeps.bash-completion  copydeps.man
src/: exit_status.rs  main.rs  parser.rs  process_deps.rs  resolver.rs  settings.rs  version.rs
