[package]
name = "copydeps"
version = "5.0.1"
license = "GPL-3.0-or-later"
description = "Find and copy all the .so / .dll files needed by an executable"
readme = "README.md"
repository = "https://github.com/suve/copydeps/"
authors = ["suve <veg@svgames.pl>"]
edition = "2018"
categories = ["command-line-utilities"]
exclude = [".circleci/*"]

[profile.release]
debug = true

[dependencies]
atty = "^0.2.14"
getopts = "^0.2.21"
goblin = "^0.5.2"
lazy_static = "^1.4.0"
regex = "^1.5.5"
same-file = "^1.0.6"

[badges]
circle-ci = { repository = "suve/copydeps", branch = "trunk" }
